modal scrollbars fixed

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ a {
 
 .header {
   z-index: 1000 !important;
-  background-image: url('skyline.jpg');
+  background-color: rgb(17, 17, 17);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -109,7 +109,6 @@ a {
   display: flex;
   align-items: center;
   z-index: 10;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
   transition: height 0.3s ease, transform 0.3s ease;
 
 
@@ -983,6 +982,7 @@ a {
 
 
 .modal-content {
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   align-items: center;
@@ -990,7 +990,7 @@ a {
   z-index: 1000 !important;
   position: fixed;
   padding: 20px;
-  min-height: 20%;
+  min-height:72%;
   max-height: 70%;
   min-width: 50%;
   max-width: 50%;
@@ -1000,24 +1000,42 @@ a {
   background-size: 400% 400%;
   animation: gradient 20s ease infinite;
   box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+.modal-content2 {
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  z-index: 1000 !important;
+  position: fixed;
+  height: 73%;
+  width: 51%;
+  border-radius: 12px;
+  background-color: rgb(14, 14, 14);
+  background-size: 400% 400%;
+  animation: gradient 20s ease infinite;
   overflow-y: scroll;
   transition: transform 0.3s ease-in-out;
   transition: opacity 1s ease-in-out;
 }
 
 
-.modal-content::-webkit-scrollbar {
-  width: 7px;
+.modal-content2::-webkit-scrollbar {
+  width: 3px;
 
 }
 
 
-.modal-content::-webkit-scrollbar-track {
+.modal-content2::-webkit-scrollbar-track {
   background-color: rgb(14, 14, 14);
 }
 
 
-.modal-content::-webkit-scrollbar-thumb {
+.modal-content2::-webkit-scrollbar-thumb {
   background: rgb(105, 105, 105);
   border-radius: 30px;
 }
@@ -1041,17 +1059,22 @@ a {
   position: absolute;
   font-family: 'lato';
   font-weight: 800;
-  top: 19px;
+  top: 10px;
   right: 10px;
   background: transparent;
   color: black;
   background-color: rgba(255, 255, 255, 0.4);
   border-radius: 800px;
   border: none;
-  padding: 5px 10px;
+  padding: 3px 8px;
   cursor: pointer;
+  transition: all 0.1s;
+  z-index: 5000;
 
+}
 
+.close-modal:hover{
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 ::-webkit-scrollbar {
@@ -1098,7 +1121,6 @@ a {
 
 .flowchart-img {
   display: flex;
-  height: 90%;
   width: 90%;
   margin-top: 20px;
   border-radius: 15px;
@@ -1320,6 +1342,9 @@ a {
     max-width: 80%;
   }
 
+  .modal-content2{
+    width: 81%;
+  }
 
   .logo,
   .github-grey,
@@ -1360,7 +1385,9 @@ a {
     display: none;
   }
 
-
+  .modal-content2{
+    width: 80%;
+  }
 
   .button.active {
     transform: scale(1.04);
